--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 nom = "4.0.0"
 clap = {version = "3.1.18", features= ["yaml"]}
+log = "0.4.17"
+env_logger = "0.9.0"
+byteorder = "1"
